--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -106,7 +106,7 @@
   ul {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 12px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -117,7 +117,7 @@
   a {
     font-family: $font-body;
     font-weight: $fw-semibold;
-    font-size: 20px;
+    font-size: 18px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     text-decoration: none;
@@ -228,7 +228,7 @@
     height: 100%;
     font-family: $font-heading;
     font-weight: $fw-semibold;
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 0.03em;
     text-decoration: none;
     color: $color-secondary;
